--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
     -->
     <title>bob music</title>
   </head>
-  <body class="root">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <!--
     <div id="root" class="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
